[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/esc.gd" type="Script" id=1]
[ext_resource path="res://images/buttons/Button (5).png" type="Texture" id=2]

[node name="esc" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1330.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )

[node name="btn_cancel" type="Sprite" parent="."]
position = Vector2( 670, 160 )
scale = Vector2( 9, 9 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 34, 10 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="btn_cancel"]
margin_right = 40.0
margin_bottom = 14.0

[node name="btn_title" type="Sprite" parent="."]
position = Vector2( 670, 320 )
scale = Vector2( 9, 9 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 34, 10 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="btn_title"]
margin_right = 40.0
margin_bottom = 14.0

[node name="btn_desktop" type="Sprite" parent="."]
position = Vector2( 670, 490 )
scale = Vector2( 9, 9 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 34, 10 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="btn_desktop"]
margin_right = 40.0
margin_bottom = 14.0
